# cdf-ts-replicator

./: .pre-commit-config.yaml  README.md  example_config.yaml  pyproject.toml  state.json
cdf_ts_replicator/: __main__.py  config.py  dto.py  extractor.py
